# custody-service-node-py

./: .gitignore  README.md  chain_observer.py  deposit_validator.py  node.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  withdraw_approver.py  zellular_observer.py
custody_service/: abstracts.py  configs.py  custom_types.py  jsonrpc_handler.py  utils.py  zellular.py
custody_service/chain_utils/: __init__.py  assetman.idl.json  solana_chain_observer.py  solana_chain_utils.py  ton_chain_utils.py
custody_service/data/: available-tokens.json
custody_service/database/: __init__.py  database_api.py  db_agents.py  db_deposit_addrs.py  db_deposits.py  db_dist_keys.py  db_withdraws.py
custody_service/tx_validation/: __init__.py  sol.py
frost-keys/: secp256k1.json
js/: backend-api.ts  cluster-manager.ts  redis-queue.ts  solana-chain-utils.ts  solana-chain-worker.ts  solana-contract-init.ts  ton-chain-utils.ts  ton-chain-worker.ts  types.ts  utils.ts  zellular.ts
js/assetman/: assetman.ts  idl.json  type.ts
js/assetman/sol/: assetman.ts
js/assetman/ton/: assetman.ts  utils.ts
js/database/: database.ts  db-deposit-addrs.ts  db-deposits.ts  db-withdraws.ts
